# CargoService

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
CargoService/: asgi.py  celery.py  settings.py  tasks.py  wsgi.py
api/: apps.py  models.py  urls.py  validators.py
api/management/commands/: load_initial_data.py
api/serializers/: car.py  location.py  shipment.py
api/views/: car.py  shipment.py
